objects/pse__Assignment__c.object
<CustomObject>
    <fields>
        <fullName>pse__Override_Timecard_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.  Note that either way, the Timecard Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, overrides the default Region to which this Assignment&apos;s Timecard Revenue Transactions will roll up for Regional Actuals, even if the Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Timecard Revenue Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Timecard Revenue Region For Assignments</relationshipLabel>
        <relationshipName>Override_TC_RevRegion_For_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>User editable number of hours originally planned for this assignment. NOTE: this field is user maintained and will not be updated automatically.</description>
        <inlineHelpText>The number of hours originally planned for this assignment. This value is independent of the actual number of hours scheduled.</inlineHelpText>
        <label>Planned Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Revenue__c</fullName>
        <description>Planned Hours * Bill Rate</description>
        <formula>pse__Planned_Hours__c * pse__Bill_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Planned Hours * Bill Rate</inlineHelpText>
        <label>Planned Revenue (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project that the resource is assigned to. This is copied from the resource request page.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Projected_Revenue__c</fullName>
        <inlineHelpText>Projected Revenue from this assignment calculated from the bill rate and hours.</inlineHelpText>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Cost_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Effective cost rate for this assignment. The default date is today.</inlineHelpText>
        <label>Resource Cost Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resource Request Lookup populated only when assignment is created from a resource request.</description>
        <inlineHelpText>Lookup to the associated resource request. This field is only populated when you create an assignment from a resource request using the Assign Resource section of the Resource Request page or the Search Resources page.</inlineHelpText>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The resource to be assigned to the project copied from the resource request page.</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Role__c</fullName>
        <inlineHelpText>The role to which the resource is being assigned.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Schedule_Updated__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether the schedule is updated based on any amendments made on the assignment detail page</inlineHelpText>
        <label>Schedule Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>System generated unique schedule number referenced on other FinancialForce PSA pages.</inlineHelpText>
        <label>Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <formula>pse__Schedule__r.pse__Scheduled_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Send_to_Third_Party_Expenses_Application__c</fullName>
        <description>Controls whether or not the assignment is sent to a third-party expenses application.</description>
        <formula>AND(pse__Resource__r.pse__Is_Resource__c , pse__Resource__r.pse__Is_Resource_Active__c , NOT(pse__Project__r.pse__Closed_for_Expense_Entry__c),  NOT(pse__Closed_for_Expense_Entry__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls whether or not the assignment is sent to a third-party expenses application.</inlineHelpText>
        <label>Send to Third-Party Expenses Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Methodologies_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Methodology field on the Time Entry page and Expense Entry page only lists assignment methodologies. When true, only assignment methodologies are shown. When false, the methodologies that belong to the related project are shown.</inlineHelpText>
        <label>Show Assignment Methodologies Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Milestones_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Milestone field on the Time Entry page and Expense Entry page only lists assignment milestones. When true, only assignment milestones are shown. When false, the milestones that belong to the project are shown.</inlineHelpText>
        <label>Show Assignment Milestones Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignment_Phases_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown. The default value is false.</description>
        <inlineHelpText>Indicates whether the Phase field on the Time Entry page and Expense Entry page only lists assignment phases. When true, only assignment phases are shown. When false, the phases that belong to the project to which the assignment relates are shown.</inlineHelpText>
        <label>Show Assignment Phases Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Schedule__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <inlineHelpText>Status of the assignment. Your administrator can configure the options that appear in the list.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                    <default>true</default>
                    <label>Tentative</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Number__c</fullName>
        <label>Suggested Bill Rate Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate__c</fullName>
        <formula>pse__Suggested_Bill_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Suggested_Bill_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Bill Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Team_Member_Swap_Date__c</fullName>
        <description>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</description>
        <inlineHelpText>This field shows the date on which most recent swap occurred. Note this field is only used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
        <label>Team Member Swap Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Team_Member_Swapped_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</description>
        <inlineHelpText>This field shows the most recent resource who was previously assigned to the assignment before the action of shift swap. Note this field is used in the swap shift functionality in Team Schedule Planner.</inlineHelpText>
        <label>Team Member Swapped Out</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments (Team Member Swapped Out)</relationshipLabel>
        <relationshipName>Assignments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot_Key__c</fullName>
        <description>A list of the related Project, Resource, and Team Schedule Slot IDs.</description>
        <inlineHelpText>A list of the related Project, Resource, and Team Schedule Slot IDs.</inlineHelpText>
        <label>Team Schedule Slot Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The team schedule slot.</description>
        <inlineHelpText>The team schedule slot.</inlineHelpText>
        <label>Team Schedule Slot</label>
        <referenceTo>pse__Team_Schedule_Slot__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Expenses_App_Correlation_ID__c</fullName>
        <description>Unique identifier of the assignment in a third-party expenses application. Used for synchronization.</description>
        <inlineHelpText>Unique identifier of the assignment in a third-party expenses application. Used for synchronization.</inlineHelpText>
        <label>Third-Party Expenses App Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable Assignments for which hours are credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable assignments for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_External_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard External Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Internal_Costs_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Timecard Internal Costs Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Use_Project_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the project currency is used in the resource cost calculations when your organization uses multiple currencies.</inlineHelpText>
        <label>Use Project Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Currency_For_Resource_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the resource currency is used in the resource cost calculations when your organization uses multiple currencies.</inlineHelpText>
        <label>Use Resource Currency For Resource Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the cost rate in the resource&apos;s contact record is used for the default cost rate.</inlineHelpText>
        <label>Use Resource Default Cost Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Resource_Default_Cost_Rate_as_Daily__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Resource Default Cost Rate as Daily</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__End_Date__c</columns>
        <columns>pse__Estimated_Time_To_Completion__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <recordTypes>
        <fullName>TR_PS_Enterprise_Assignment</fullName>
        <active>true</active>
        <label>TR PS Enterprise Assignment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__Assignment_Currency_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Currency field value may not be updated once set.</description>
        <errorConditionFormula>ISCHANGED(CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>An Assignment&apos;s Currency field value may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c, NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;),  NOT(pse__Project__r.pse__Is_Billable__c))</errorConditionFormula>
        <errorDisplayField>pse__Is_Billable__c</errorDisplayField>
        <errorMessage>An Assignment may only be marked &apos;Is Billable&apos; if it is for a Billable Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Project_is_Constant</fullName>
        <active>true</active>
        <description>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),LEN(pse__Project__c)=0,ISCHANGED(pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Project field value may not be blank and may not be updated once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Constant</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value can not be changed.</description>
        <errorConditionFormula>ISCHANGED(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignment_Resource_is_Required</fullName>
        <active>false</active>
        <description>An Assignment&apos;s Resource field value may not be blank.</description>
        <errorConditionFormula>ISBLANK(pse__Resource__c)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>An Assignment&apos;s Resource field value may not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Bill_Rate_Required</fullName>
        <active>true</active>
        <description>This validation rule forces Bill Rate on Assignment to be required in effect, even if the Bill Rate field itself is eventually marked as NOT required to allow access limitations on it.</description>
        <errorConditionFormula>ISNULL(pse__Bill_Rate__c)</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignment requires a Bill Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Credited</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Credited__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Credited__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Credited&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Billable_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</description>
        <errorConditionFormula>AND(pse__Is_Billable__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may only be marked as &quot;Time Excluded&quot; if they are Non-Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Credited_Assignments_may_not_be_Excluded</fullName>
        <active>true</active>
        <description>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</description>
        <errorConditionFormula>AND(pse__Time_Credited__c,pse__Time_Excluded__c)</errorConditionFormula>
        <errorDisplayField>pse__Time_Excluded__c</errorDisplayField>
        <errorMessage>Assignments may not be marked as &quot;Time Excluded&quot; if they are also marked as &quot;Time Credited&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Max_One_Default_Resource_Cost_Currency</fullName>
        <active>true</active>
        <description>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</description>
        <errorConditionFormula>AND(pse__Use_Project_Currency_For_Resource_Cost__c,pse__Use_Resource_Currency_For_Resource_Cost__c)</errorConditionFormula>
        <errorMessage>At most one of the two override checkboxes may be set for which currency to hold Resource Cost Rates constant in - Resource or Project.  If neither is checked, the default config is used.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Non_Billable_Bill_Rate_must_be_Zero</fullName>
        <active>true</active>
        <description>Assignments marked non-billable may not have a bill rate greater than zero.</description>
        <errorConditionFormula>AND(NOT(pse__Is_Billable__c),NOT(pse__Bill_Rate__c = 0.0))</errorConditionFormula>
        <errorDisplayField>pse__Bill_Rate__c</errorDisplayField>
        <errorMessage>Assignments marked non-billable may not have a bill rate greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__cannot_switch_schedule_records</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(pse__Schedule__c)</errorConditionFormula>
        <errorDisplayField>pse__Schedule__c</errorDisplayField>
        <errorMessage>You cannot switch the schedule record once set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__select_resource</fullName>
        <active>true</active>
        <errorConditionFormula>( 
	ISNEW() 
	||
	ISCHANGED( pse__Resource__c) 
) 
&amp;&amp;  
( 
	NOT(pse__Resource__r.pse__Is_Resource__c) 
	||  
	NOT(pse__Resource__r.pse__Is_Resource_Active__c) 
)</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>You must select an active resource.</errorMessage>
    </validationRules>
</CustomObject>